# dwarffi

./: .gitignore  LICENSE  README.md  hatch_build.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: 01_basics.py  02_live_memory.py  03_symbols_and_files.py  04_bitfields.py  05_unions_and_casting.py  06_multi_isf.py
scripts/: benchmark.py  benchmark_json.py  demo_volatility_windows_isf.py  minify_isf.py  profile_macro.py  profile_micro.py  profile_unpack.py
src/dwarffi/: __init__.py  __main__.py  backend.py  cli.py  core.py  dffi.py  dtyping.py  instances.py  parser.py  types.py  utils.py
tests/: conftest.py  test_accesss_types.py  test_addressof_enhancement.py  test_advanced.py  test_architectures.py  test_backend.py  test_backends.py  test_binary_permissions.py  test_bitfield_invariants.py  test_bitfields.py  test_cdef.py  test_cdef_integration.py  test_comp.py  test_coverage_deep.py  test_ctype_cache.py  test_deep_init.py  test_derived_types.py  test_e2e_cdef.py  test_e2e_corner_cases.py  test_e2e_cpp.py  test_e2e_edge_cases.py  test_e2e_exotic_types.py  test_e2e_functions.py  test_e2e_typedefs.py  test_errors.py  test_examples.py  test_exotic_ints.py  test_ffi.py  test_full_typedefs.py  test_functions.py  test_get_type_and_symbols.py  test_inspection_utils.py  test_instances_write_bytes_array_enum.py  test_integer_packing.py  test_loader_paths.py  test_magic_math.py  test_magic_methods.py  test_multi_isf.py  test_perf.py  test_smoke.py  (+11 more)
tests/fixtures/: windows_min_ntkrnlmp.json
