[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "dwarffi"
dynamic = ["version"]
description = "dwarffi is a Python library for parsing ISF files and providing an interface to access kernel symbols and types."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.4.0",
  "ujson>=5.11.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
  "src/dwarffi/_version.py",
  "src/dwarffi/*_generated.py",
  # optional: other generated paths
]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["dwarffi"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/dwarffi/_version.py"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"