[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "dwarffi"
dynamic = ["version"]
description = "dwarffi is a Python library for parsing ISF files and providing an interface to access kernel symbols and types."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "msgspec",
]
authors = [
  { name = "Luke Craig", email = "luke.craig@mit.edu" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Operating System Kernels",
]

[project.urls]
Repository = "https://github.com/rehosting/dwarffi"
Issues = "https://github.com/rehosting/dwarffi/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.4.0",
  "mypy>=1.8.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
  "src/dwarffi/_version.py",
  "src/dwarffi/*_generated.py",
  # optional: other generated paths
]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["dwarffi"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/dwarffi/_version.py"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.mypy]
files = ["src/dwarffi", "tests"]
python_version = "3.10"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "dwarffi._version"
ignore_missing_imports = true